Use custom tab-bar HTML element

--- a/Resources/Styles/main.scss
+++ b/Resources/Styles/main.scss
@@ -19,3 +19,4 @@ $mobile-breakpoint: 767px;
 @import 'readme.scss';
 @import 'spinner.scss';
 @import 'github-highlighting.scss';
+@import 'tab-bar.scss';
