My editor is picky about whitespace!

--- a/Resources/Styles/package_list.scss
+++ b/Resources/Styles/package_list.scss
@@ -34,13 +34,11 @@
       p {
         margin: 5px 0;
         color: var(--page-text);
-         
+
         &.stars {
-            text-align: end
+          text-align: end;
         }
-        
       }
-    
     }
 
     &.selected {
