--- a/Resources/Styles/package_list.scss
+++ b/Resources/Styles/package_list.scss
@@ -34,21 +34,24 @@
       p {
         margin: 5px 0;
         color: var(--page-text);
-
-        &.stars {
-          text-align: end;
-          padding-right: 15px;
-          background-image: var(--image-star);
-          background-repeat: no-repeat;
-          background-size: 10%;
-          background-position: center;
-        }
       }
-      
+
     }
 
     &.selected {
       background-color: var(--package-list-selectedbackground);
     }
   }
+
+  #star_text {
+    background-image: var(--image-star);
+    background-repeat: no-repeat;
+    background-size: 30%;
+    background-position: center;
+    padding: 25px;
+
+  }
+
 }
+
+
