--- a/Resources/Styles/package_list.scss
+++ b/Resources/Styles/package_list.scss
@@ -43,12 +43,12 @@
     }
   }
 
-  #star_text {
-    background-image: var(--image-star);
+.stars {
+    padding-left: 25px;
+    background-size: 18px;
     background-repeat: no-repeat;
-    background-size: 30%;
-    background-position: center;
-    padding: 25px;
+    background-position: top 2px left;
+    background-image: var(--image-star);
   }
 
 }
