This `block` is needed.

--- a/Resources/Styles/package_list.scss
+++ b/Resources/Styles/package_list.scss
@@ -24,6 +24,7 @@
     border-left: 3px var(--package-list-border) solid;
 
     a {
+      display: block;
       padding: 10px;
       align-items: center;
 
