Added a collapsed class that shows two rows of tags and made it on by default.

--- a/Resources/Styles/package.scss
+++ b/Resources/Styles/package.scss
@@ -101,6 +101,11 @@
       li.keywords {
         grid-column-start: span 2;
         background-image: var(--image-tag);
+
+        ul.collapsed {
+          max-height: 50px;
+          overflow: hidden;
+        }
       }
     }
 
