Added the dependency list item styling.

--- a/Resources/Styles/package.scss
+++ b/Resources/Styles/package.scss
@@ -66,6 +66,11 @@
         background-image: var(--image-speech-bubble);
       }
 
+      li.dependencies {
+        grid-column-start: span 2;
+        background-image: var(--image-dependency-tree);
+      }
+
       li.license {
         background-image: var(--image-osi);
 
