Tweaked the display of the footer of a package list so that only the package identifier is in the link colour.

--- a/Resources/Styles/package_list.scss
+++ b/Resources/Styles/package_list.scss
@@ -37,8 +37,12 @@
         color: var(--page-text);
       }
 
-      small > span {
+      small {
         color: var(--page-text);
+
+        > .identifier {
+          color: var(--link-text);
+        }
       }
     }
 
