--- a/Resources/Styles/search_results.scss
+++ b/Resources/Styles/search_results.scss
@@ -35,6 +35,25 @@ section.results {
   h4 {
     margin: 0;
   }
+
+  .author_results {
+    ul {
+      padding: 0;
+
+      li {
+        list-style: none;
+        border-left: 2px var(--bordered-button-border) solid;
+        background-color: var(--bordered-button-background);
+
+        &:hover {
+          background-color: var(--bordered-button-hover);
+        }
+        & > a {
+          padding: 2px 6px;
+        }
+      }
+    }
+  }
 }
 
 ul.pagination {
