--- a/Resources/Styles/search_results.scss
+++ b/Resources/Styles/search_results.scss
@@ -17,7 +17,7 @@
   All styling related search results.
 ---------------------------------------------------------------------------- */
 
-section.results {
+section.search_results {
   margin-top: 50px;
 
   // This rule may seem useless but displaying these sections as flex stops browsers
