--- a/Resources/Styles/search_results.scss
+++ b/Resources/Styles/search_results.scss
@@ -38,7 +38,10 @@ section.search_results {
 
   .author_results {
     ul {
+      display: flex;
+      flex-direction: column;
       padding: 0;
+      gap: 5px;
 
       li {
         list-style: none;
@@ -49,7 +52,7 @@ section.search_results {
           background-color: var(--bordered-button-hover);
         }
         & > a {
-          padding: 2px 6px;
+          padding: 3px 7px;
         }
       }
     }
