Mention that the project is open-source in the sponsorship CTA.

--- a/Resources/Styles/scta.scss
+++ b/Resources/Styles/scta.scss
@@ -39,6 +39,10 @@
 
 #menu_scta_help {
   display: none;
+
+  p {
+    margin: 5px 0;
+  }
 }
 
 // Note: This is min-width, not max-width as usual. This *only* for larger devices.
