--- a/Resources/Styles/search_results.scss
+++ b/Resources/Styles/search_results.scss
@@ -80,22 +80,24 @@ ul.filter_list {
   display: flex;
   flex-direction: column;
   list-style: none;
-  gap: 8px;
-  padding-left: 0;
+  gap: 5px;
+  padding: 0;
 
-  .filter-key, .filter-value {
-    background-color: var(--blockquote-border);
+  .filter-key,
+  .filter-value {
+    background-color: var(--search-filter-background);
     padding: 3px 6px;
-  }
-  .filter-comparison {
-    color: var(--blockquote-text);
+    font-weight: 500;
   }
 
   li:not(:first-child):before {
-    content: "&";
+    content: 'and';
+    font-weight: 500;
+    color: var(--search-filter-ampersand-color);
     margin-right: 5px;
   }
+
   li:first-child {
-    margin-left: 16px;
+    margin-left: 33px;
   }
 }
