Adjust JavaScript to expect a server-side suggestions element and append suggestions to it.

--- a/Resources/Styles/search.scss
+++ b/Resources/Styles/search.scss
@@ -69,6 +69,10 @@ section.search {
     margin-top: 5px;
     font-size: 12px;
 
+    .suggestion {
+      margin-right: 5px;
+    }
+
     a {
       cursor: pointer;
     }
