Hide the search suggestions on mobile.

--- a/Resources/Styles/search.scss
+++ b/Resources/Styles/search.scss
@@ -76,6 +76,12 @@ section.search {
     a {
       cursor: pointer;
     }
+
+    @media screen and (max-width: $mobile-breakpoint) {
+      .suggestion {
+        display: none;
+      }
+    }
   }
 
   &.home {
