--- a/Resources/Styles/header_footer.scss
+++ b/Resources/Styles/header_footer.scss
@@ -42,7 +42,7 @@ footer {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      align-items: center;
+      justify-content: center;
 
       li {
         margin: 0 5px;
