--- a/Resources/Styles/build-monitor.scss
+++ b/Resources/Styles/build-monitor.scss
@@ -13,28 +13,11 @@
  * limitations under the License.
  */
 
-$mobile-breakpoint: 767px;
+/* -------------------------------------------------------------------------
+  Individual build log page.
+---------------------------------------------------------------------------- */
 
-@import 'colors.scss';
-@import 'images.scss';
-@import 'base.scss';
-@import 'scta.scss';
-@import 'layout.scss';
-@import 'header_footer.scss';
-@import 'home.scss';
-@import 'markdown.scss';
-@import 'search.scss';
-@import 'search_results.scss';
-@import 'package.scss';
-@import 'package_list.scss';
-@import 'maintainer_info.scss';
-@import 'copyable_input.scss';
-@import 'matrix.scss';
-@import 'build_logs.scss';
-@import 'error.scss';
-@import 'readme.scss';
-@import 'spinner.scss';
-@import 'github-highlighting.scss';
-@import 'tab-bar.scss';
-@import 'keywords.scss';
-@import 'build-monitor.scss';
+#build_monitor_list {
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr 2fr 2fr 1fr 2fr;
+}
