--- a/Resources/Styles/colors.scss
+++ b/Resources/Styles/colors.scss
@@ -74,6 +74,7 @@
 
 :root {
   --page-text: var(--black);
+  --page-dimmed-text: var(--grey);
   --page-background: var(--white);
   --link-text: var(--mid-blue);
   --link-highlight: var(--mid-red);
