--- a/Resources/Styles/build-monitor.scss
+++ b/Resources/Styles/build-monitor.scss
@@ -121,12 +121,16 @@
       }
 
       .package_name {
-        grid-column: 1 / span 3;
+        grid-column: 1 / span 4;
+      }
+
+      .reference {
+        grid-column: 1 / span 2;
       }
 
       .status {
-        grid-column: auto;
-        grid-row: auto;
+        grid-column: 3 / span 2;
+        grid-row: 2;
       }
     }
   }
