Tweaked server icon.

--- a/Resources/Styles/build-monitor.scss
+++ b/Resources/Styles/build-monitor.scss
@@ -86,7 +86,7 @@
       background-size: 15px;
       background-position: left center;
       background-repeat: no-repeat;
-      background-image: var(--image-servers);
+      background-image: var(--image-server);
     }
 
     &:hover {
