--- a/Resources/Styles/build-monitor.scss
+++ b/Resources/Styles/build-monitor.scss
@@ -25,7 +25,7 @@
     display: grid;
     gap: 5px;
     padding: 10px;
-    grid-template-columns: 3fr 2fr 3fr repeat(3, 2fr);
+    grid-template-columns: repeat(2, 2fr) 3fr repeat(2, 2fr);
     background-color: var(--grid-default-background);
     border-left: 3px var(--grid-default-border) solid;
 
@@ -34,7 +34,7 @@
     }
 
     .package_name {
-      grid-column: 1 / span 5;
+      grid-column: 1 / span 4;
 
       h3 {
         margin: 0;
@@ -49,12 +49,14 @@
     }
 
     .status {
-      grid-column: 6;
+      grid-column: 5;
       grid-row: 1 / span 2;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       margin: -10px;
+      gap: 3px;
 
       > span {
         background-size: 18px;
@@ -81,7 +83,7 @@
       }
     }
 
-    .runner {
+    .runner > span {
       padding-left: 22px;
       background-size: 15px;
       background-position: left center;
@@ -96,7 +98,8 @@
         &.ok {
           background-color: var(--mid-green);
 
-          > span {
+          > span,
+          > small {
             filter: brightness(100);
           }
         }
@@ -104,7 +107,8 @@
         &.failed {
           background-color: var(--mid-red);
 
-          > span {
+          > span,
+          > small {
             filter: brightness(100);
           }
         }
@@ -118,9 +122,12 @@
         grid-column: span 2;
       }
 
-      .package_name,
-      .reference {
+      .package_name {
         grid-column: 1 / span 4;
+      }
+
+      .reference {
+        grid-column: 1 / span 2;
       }
 
       .status {
@@ -128,6 +135,11 @@
         padding: 10px;
         grid-column: 1 / span 4;
         grid-row: 5;
+      }
+
+      .runner {
+        grid-column: 3;
+        grid-row: 2;
       }
     }
   }
