--- a/Resources/Styles/colors.scss
+++ b/Resources/Styles/colors.scss
@@ -79,9 +79,9 @@
   --link-text: var(--mid-blue);
   --link-highlight: var(--mid-red);
 
-  --popover-background: var(--very-light-grey);
-  --popover-border: var(--light-grey);
-  --popover-shadow: 0 3px 6px 3px rgba(0, 0, 0, 0.1);
+  --panel-background: var(--very-light-grey);
+  --panel-border: var(--light-grey);
+  --panel-shadow: 0 6px 10px 5px rgba(0, 0, 0, 0.1);
 
   --green-text: var(--light-green);
   --orange-text: var(--orange);
@@ -160,8 +160,8 @@
     --page-text: var(--white);
     --page-background: var(--black);
 
-    --popover-background: var(--very-dark-grey);
-    --popover-border: var(--dark-grey);
+    --panel-background: var(--very-dark-grey);
+    --panel-border: var(--dark-grey);
 
     --green-text: var(--mid-green);
 
