Moved the copy buttons into a panel along with the copy package URL button.

--- a/Resources/Styles/main.scss
+++ b/Resources/Styles/main.scss
@@ -20,6 +20,7 @@ $mobile-breakpoint: 767px;
 @import 'base.scss';
 @import 'scta.scss';
 @import 'layout.scss';
+@import 'panel.scss';
 @import 'header_footer.scss';
 @import 'home.scss';
 @import 'markdown.scss';
