--- a/Resources/Styles/package.scss
+++ b/Resources/Styles/package.scss
@@ -273,3 +273,11 @@ span.branch {
   color: var(--branch-text);
   background-image: var(--image-branch);
 }
+
+/* Use this package panel */
+
+.use_this_package {
+  p {
+    margin-bottom: 3px;
+  }
+}
